Big R data refactor

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+# Ignore venv
 .venv/
-data/batter_data.csv
-*/__pycache__/*
+
+# Ignore extracted data
+data/*.csv
+
+# Ignore outputs
+outputs/
+
+# Ignore pycache
+__pycache__/
